manifests/ingress-route.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: task-management-microservice
  labels:
    app.kubernetes.io/name: task-management-microservice
    app.kubernetes.io/part-of: application-layer
    app.kubernetes.io/component: ingress-route
    app.kubernetes.io/version: 1.0.0
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`api.getbud.co`) && PathPrefix(`/task-management`)
      kind: Rule
      middlewares:
        - name: task-management-replace-root-path
      services:
        - name: task-management-microservice-stable
          port: 80
    - match: Host(`api.canary.getbud.co`) && PathPrefix(`/routines`)
      kind: Rule
      middlewares:
        - name: task-management-microservice-replace-root-path
      services:
        - name: task-management-microservice-canary
          port: 80
  tls:
    certResolver: letsencrypt
    options:
      minVersion: VersionTLS12

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: task-management-microservice-replace-root-path
spec:
  replacePathRegex:
    regex: ^/task-management/(.*)
    replacement: /$1
